# Chess-Bot

./: .gitignore  README.md  environment.yml  project.ipynb  pyproject.toml  run
chessbot/: __init__.py  dataset.py  engine.py  environment.py  model.py
docs/: howto.txt  links.txt
models/: deepchess.h5  pos2vec.h5
test/: fingerprint.pb  keras_metadata.pb  saved_model.pb
test/variables/: variables.data-00000-of-00001  variables.index
