[tool.poetry]
name = "chessbot"
version = "0.1.0"
description = ""
authors = ["Will Humphlett <will@humphlett.net>"]
readme = "README.md"
packages = [{include = "chessbot"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"
requests = "^2.28.1"
pyunpack = "^0.3"
patool = "^1.12"
fastparquet = "^2022.12.0"
python-chess = "^1.999"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
